<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="time" />

    <TextView
        android:id="@+id/reviewer_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="reviewer" />

    <TextView
        android:id="@+id/category_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/category" />

    <TextView
        android:id="@+id/nominee_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/nominee" />

    <TextView
        android:id="@+id/review_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/review" />

</LinearLayout>